# primal

./: .gitignore  CMakeLists.txt  README.md  primal.cpp
.github/workflows/: release.yml
include/: pi.h  sieve.h  timer.h
script/: library.sh
src/: main.cpp  pi.cpp  sieve.cpp  timer.cpp
